Fix: editor haz zero height and cannot be resized on mobile

--- a/client/app/assets/less/redash/query.less
+++ b/client/app/assets/less/redash/query.less
@@ -355,6 +355,7 @@ a.label-tag {
     .editor {
       border-bottom: 1px solid #efefef;
       margin-bottom: -10px;
+      flex: 0 0 auto;
     }
 
     .pivot-table-visualization-container > table,
